--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -39,15 +39,7 @@
   right: 0;
   position: relative;
   height: 90px;
-  // top: calc(100% - 100px);
-  // font-size: 20px;
 }
-.page {
-  height: calc(100% + 200px);
-}
-@font-face {
-  /* font-properties */
-  font-family: MiSans;
-  src: url("https://cdn.jsdelivr.net/gh/folltoshe/lx-music-docs@main/MiSans.ttf");
-}
-$font-family: "MiSans";
+// .page {
+//   height: calc(100% + 200px);
+// }
