--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,4 +1,4 @@
-// place your custom styles here
+// 滚动条
 ::-webkit-scrollbar {
   /*滚动条整体部分，其中的属性有width,height,background,border等（就和一个块级元素一样）（位置1）*/
   width: 5px;
@@ -23,24 +23,21 @@
   /*边角（位置6）*/
   background: #c0c0c0;
 }
-.footer-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-evenly;
-  border-top: 1px solid var(--border-color);
-  background: var(--bg-color);
-  color: var(--dark-color);
-  text-align: center;
-  transition: border-top-color var(--color-transition),
-    background var(--color-transition);
-  bottom: 0;
-  margin: auto;
-  left: 0;
-  right: 0;
-  position: relative;
-  height: 90px;
+
+// 字体
+// @import url(https://cdn.jsdelivr.net/npm/lxgw-wenkai-lite-webfont@1.6.0/style.css);
+@import url(https://unpkg.com/lxgw-wenkai-lite-webfont@1.6.0/style.css);
+:root {
+  --font-family-fancy: 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', Georgia Pro, Crimson, Georgia, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    STHeiti, 'Microsoft YaHei', SimSun, sans-serif;
+  --font-family: 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', Georgia Pro, Crimson, Georgia, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    STHeiti, 'Microsoft YaHei', SimSun, sans-serif;
+  --font-family-code: Consolas, Monaco, 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', monospace;
 }
-// .page {
-//   height: calc(100% + 200px);
-// }
+* {
+  font-family: 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', Georgia Pro, Crimson, Georgia, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    STHeiti, 'Microsoft YaHei', SimSun, sans-serif;
+}
