--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,7 +1,7 @@
 // 滚动条
 ::-webkit-scrollbar {
   /*滚动条整体部分，其中的属性有width,height,background,border等（就和一个块级元素一样）（位置1）*/
-  width: 5px;
+  width: 6.5px;
   height: 8px;
 }
 ::-webkit-scrollbar-track {
@@ -24,20 +24,32 @@
   background: #c0c0c0;
 }
 
+// 主页文字
+.home.project .hero h1,
+.home.project .hero .description,
+.home.project .hero .action {
+  margin: 20px;
+}
+
+// 提醒
+strong {
+  color: var(--black);
+}
+
+// 主页按钮
+.home.project .hero .action-button {
+  border-radius: 40px;
+}
+
 // 字体
 // @import url(https://cdn.jsdelivr.net/npm/lxgw-wenkai-lite-webfont@1.6.0/style.css);
-@import url(https://unpkg.com/lxgw-wenkai-lite-webfont@1.6.0/style.css);
+// @import url(https://unpkg.com/lxgw-wenkai-lite-webfont@1.6.0/style.css);
+@import url(https://jsd.cdn.zzko.cn/npm/lxgw-wenkai-lite-webfont@1.6.0/style.css);
 :root {
-  --font-family-fancy: 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', Georgia Pro, Crimson, Georgia, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    STHeiti, 'Microsoft YaHei', SimSun, sans-serif;
-  --font-family: 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', Georgia Pro, Crimson, Georgia, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    STHeiti, 'Microsoft YaHei', SimSun, sans-serif;
-  --font-family-code: Consolas, Monaco, 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', monospace;
+  --font-family-fancy: 'LXGW WenKai Lite', sans-serif;
+  --font-family: 'LXGW WenKai Lite', sans-serif;
+  --font-family-code: 'LXGW WenKai Lite', sans-serif;
 }
 * {
-  font-family: 'LXGW WenKai Lite', 'PT Serif', 'Noto Serif SC', Georgia Pro, Crimson, Georgia, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    STHeiti, 'Microsoft YaHei', SimSun, sans-serif;
+  font-family: 'LXGW WenKai Lite', sans-serif;
 }
