--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -44,7 +44,6 @@ strong {
 .home.project .hero h1,
 .home.project .hero .description,
 .home.project .hero .action {
-  // margin: auto;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
@@ -66,4 +65,149 @@ strong {
 }
 * {
   font-family: 'LXGW WenKai Lite', sans-serif;
+}
+
+.buttons {
+  // --theme-color: #3eaf7c;
+  // --text-color: #2c3e50;
+  // --bg-color: #fff;
+  // --bg-color-secondary: #f8f8f8;
+  // --border-color: #eaecef;
+  // --box-shadow: #f0f1f2;
+  // --card-shadow: rgba(0, 0, 0, 0.15);
+  // --black: #000;
+  // --dark-grey: #666;
+  // --light-grey: #999;
+  // --white: #fff;
+  // --grey3: #333;
+  // --grey12: #bbb;
+  // --grey14: #eee;
+  // --navbar-height: 3.75rem;
+  // --navbar-horizontal-padding: 1.5rem;
+  // --navbar-vertical-padding: 0.7rem;
+  // --navbar-mobile-height: 3.25rem;
+  // --navbar-mobile-horizontal-padding: 1rem;
+  // --navbar-mobile-vertical-padding: 0.5rem;
+  // --sidebar-width: 18rem;
+  // --sidebar-mobile-width: 16rem;
+  // --content-width: 740px;
+  // --home-page-width: 1160px;
+  // --line-numbers-width: 2.5rem;
+  // --color-transition: 0.3s ease;
+  // --transform-transition: 0.3s ease;
+  // --bg-color-light: #fff;
+  // --bg-color-back: #f8f8f8;
+  // --bg-color-float: #fff;
+  // --text-color-light: #3a5169;
+  // --text-color-lighter: #476582;
+  // --text-color-bright: #6a8bad;
+  // --bg-color-blur: rgba(255, 255, 255, 0.9);
+  // --bg-color-float-blur: rgba(255, 255, 255, 0.9);
+  // --theme-color-dark: #389e70;
+  // --theme-color-light: #4abf8a;
+  // --theme-color-mask: rgba(62, 175, 124, 0.15);
+  // --badge-tip-color: #42b983;
+  // --badge-warning-color: #f4cd00;
+  // --badge-danger-color: #f55;
+  // --badge-info-color: #0295ff;
+  // --badge-note-color: #666;
+  // --external-link-icon-color: #aaa;
+  // --nprogress-color: #29d;
+  // --nprogress-z-index: 1031;
+  // --balloon-border-radius: 2px;
+  // --balloon-color: rgba(16, 16, 16, 0.95);
+  // --balloon-text-color: #fff;
+  // --balloon-font-size: 12px;
+  // --balloon-move: 4px;
+  // --copy-icon: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' height='20' width='20' stroke='rgba(128,128,128,1)' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M9 5H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-2M9 5a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2M9 5a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2'/%3E%3C/svg%3E");
+  // --copied-icon: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' height='20' width='20' stroke='rgba(128,128,128,1)' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M9 5H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-2M9 5a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2M9 5a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2m-6 9 2 2 4-4'/%3E%3C/svg%3E");
+  // --info-title-color: #193c47;
+  // --info-bg-color: #eef9fd;
+  // --info-border-color: #4cb3d4;
+  // --note-title-color: #474748;
+  // --note-bg-color: #fdfdfe;
+  // --note-border-color: #d4d5d8;
+  // --tip-title-color: #003100;
+  // --tip-bg-color: #e6f6e6;
+  // --tip-border-color: #009400;
+  // --warning-title-color: #4d3800;
+  // --warning-bg-color: #fff8e6;
+  // --warning-border-color: #e6a700;
+  // --danger-title-color: #4b1113;
+  // --danger-bg-color: #ffebec;
+  // --danger-border-color: #e13238;
+  // --detail-bg-color: #eee;
+  // --detail-text-color: inherit;
+  // --playground-header-bg-color: #eee;
+  // --tab-bg-color: var(--c-bg, #fff);
+  // --tab-nav-text-color: var(--c-text, #2c3e50);
+  // --tab-nav-bg-color: #e0e0e0;
+  // --tab-nav-hover-color: #eee;
+  // --c-brand: var(--theme-color);
+  // --c-brand-light: var(--theme-color-light);
+  // --c-text: var(--text-color);
+  // --c-bg: var(--bg-color);
+  // --c-bg-light: var(--bg-color-secondary);
+  // --c-border: var(--border-color);
+  // --navbar-bg-color: var(--bg-color-float-blur);
+  // --sidebar-bg-color: var(--bg-color-blur);
+  // color-scheme: light;
+  // --font-family-fancy: 'LXGW WenKai Lite', sans-serif;
+  // --font-family: 'LXGW WenKai Lite', sans-serif;
+  // --font-family-code: 'LXGW WenKai Lite', sans-serif;
+  // --docsearch-primary-color: #5468ff;
+  // --docsearch-text-color: #1c1e21;
+  // --docsearch-spacing: 12px;
+  // --docsearch-icon-stroke-width: 1.4;
+  // --docsearch-highlight-color: var(--docsearch-primary-color);
+  // --docsearch-muted-color: #969faf;
+  // --docsearch-container-background: rgba(101, 108, 133, 0.8);
+  // --docsearch-logo-color: #5468ff;
+  // --docsearch-modal-width: 560px;
+  // --docsearch-modal-height: 600px;
+  // --docsearch-modal-background: #f5f6f7;
+  // --docsearch-modal-shadow: inset 1px 1px 0 0 hsla(0, 0%, 100%, 0.5), 0 3px 8px 0 #555a64;
+  // --docsearch-searchbox-height: 56px;
+  // --docsearch-searchbox-background: #ebedf0;
+  // --docsearch-searchbox-focus-background: #fff;
+  // --docsearch-searchbox-shadow: inset 0 0 0 2px var(--docsearch-primary-color);
+  // --docsearch-hit-height: 56px;
+  // --docsearch-hit-color: #444950;
+  // --docsearch-hit-active-color: #fff;
+  // --docsearch-hit-background: #fff;
+  // --docsearch-hit-shadow: 0 1px 3px 0 #d4d9e1;
+  // --docsearch-key-gradient: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
+  // --docsearch-key-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(30, 35, 90, 0.4);
+  // --docsearch-footer-height: 44px;
+  // --docsearch-footer-background: #fff;
+  // --docsearch-footer-shadow: 0 -1px 0 0 #e0e3e8, 0 -3px 6px 0 rgba(69, 98, 155, 0.12);
+  // -webkit-font-smoothing: antialiased;
+  // -webkit-tap-highlight-color: transparent;
+  // --code-hl-bg-color: var(--code-highlight-line-color);
+  // --code-ln-color: var(--code-line-color);
+  // --code-ln-wrapper-width: var(--line-numbers-width);
+  // --code-tabs-nav-text-color: var(--text-color);
+  // --code-tabs-nav-bg-color: var(--code-border-color);
+  // --code-tabs-nav-hover-color: var(--code-highlight-line-color);
+  // --code-color: #383a42;
+  // --code-line-color: rgba(56, 58, 66, 0.67);
+  // --code-bg-color: #ecf4fa;
+  // --code-border-color: #c3def3;
+  // --code-highlight-line-color: #d8e9f6;
+  text-align: center;
+  line-height: 1.7;
+  font-weight: 500;
+  text-decoration: none;
+  overflow-wrap: break-word;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0.5rem;
+  padding: 0.5em 1.5rem;
+  border: 1px solid var(--text-color);
+  font-size: 1.2rem;
+  transition: color var(--color-transition), color var(--color-transition), transform var(--transform-transition);
+  border-radius: 45px;
+  border-color: var(--theme-color);
+  background: var(--theme-color);
+  color: var(--white);
 }
