--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,28 +1,5 @@
-// 滚动条
-::-webkit-scrollbar {
-  /*滚动条整体部分，其中的属性有width,height,background,border等（就和一个块级元素一样）（位置1）*/
-  width: 6.5px;
-  height: 8px;
-}
-::-webkit-scrollbar-track {
-  /*外层轨道，可以用display:none让其不显示，也可以添加背景图片，颜色改变显示效果（位置3）*/
-  // background: #f8f9fa;
-  display: none;
-}
-::-webkit-scrollbar-track-piece {
-  /*内层轨道，滚动条中间部分（位置4）*/
-  // background: #f8f9fa;
-  display: none;
-}
-::-webkit-scrollbar-thumb {
-  /*滚动条里面可以拖动的那部分（位置5）*/
-  background: var(--theme-color);
-  border-radius: 4px;
-}
-::-webkit-scrollbar-corner {
-  /*边角（位置6）*/
-  background: #c0c0c0;
-}
+@import './element/main.scss';
+@import './element/button.scss';
 
 // 主页文字
 .home.project .hero h1,
@@ -54,80 +31,6 @@ strong {
   text-align: center;
 }
 
-// 字体
-// @import url(https://jsd.cdn.zzko.cn/npm/lxgw-wenkai-lite-webfont@1.6.0/style.css);
-@font-face {
-  font-family: 'HYWenHei 85W';
-  src: url(https://jsd.cdn.zzko.cn/npm/genshin-fonts@1.0.1/output.ttf);
-}
-// :root {
-//   --font-family-fancy: 'LXGW WenKai Lite', sans-serif;
-//   --font-family: 'LXGW WenKai Lite', sans-serif;
-//   --font-family-code: 'LXGW WenKai Lite', sans-serif;
-// }
-:root {
-  --font-family-fancy: 'HYWenHei 85W', sans-serif;
-  --font-family: 'HYWenHei 85W', sans-serif;
-  --font-family-code: 'HYWenHei 85W', sans-serif;
-}
-* {
-  font-family: 'HYWenHei 85W', sans-serif;
-}
-
 .nav-links {
   margin-left: 20px !important;
-}
-
-.button-home-group {
-}
-.button-home-item {
-  text-align: center;
-  width: 200px;
-  font-size: 20px;
-  line-height: 10px;
-  height: 50px;
-  border-radius: 26px;
-  background-color: #687aa1;
-  border: 0px;
-  cursor: pointer;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  box-sizing: border-box;
-  user-select: none;
-}
-.button-home-content {
-  text-align: center;
-  color: #ffffff;
-  margin-left: 20px;
-}
-.button-home-icon {
-  margin-left: 6px;
-  width: 30px;
-  height: 30px;
-  // border-style: solid;
-  border-radius: 20px;
-  border-left-color: rgb(255, 221, 0);
-  background-color: #656565;
-  color: rgb(255, 221, 0);
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  animation: donut-spin 1.2s linear infinite;
-}
-.button-home-icon span {
-  font-size: 20px;
-  line-height: 30px;
-  text-align: center;
-}
-
-@keyframes donut-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
 }
