--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,5 +1,5 @@
 @import './element/main.scss';
-@import './element/button.scss';
+@import './element/xnkl.scss';
 
 // 主页文字
 .home.project .hero h1,
