--- a/src/.vuepress/styles/element/main.scss
+++ b/src/.vuepress/styles/element/main.scss
@@ -37,7 +37,7 @@
 // 原神
 @font-face {
   font-family: 'HYWenHei 85W';
-  src: url(https://cdn.jsdelivr.ren/npm/folltoshe-resources@1.0.0/fonts/genshin/index.ttf);
+  src: url(http://cdn.jsdelivr.ren/npm/folltoshe-resources@1.0.0/fonts/genshin/index.ttf);
 }
 :root {
   --font-family-fancy: 'HYWenHei 85W', sans-serif;
