--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,8 +1,52 @@
-@import './element/main.scss';
-@import './element/xnkl.scss';
+/** 滚动条 */
+::-webkit-scrollbar {
+  /*滚动条整体部分，其中的属性有width,height,background,border等（就和一个块级元素一样）（位置1）*/
+  width: 6.5px;
+  height: 8px;
+}
+::-webkit-scrollbar-track {
+  /*外层轨道，可以用display:none让其不显示，也可以添加背景图片，颜色改变显示效果（位置3）*/
+  // background: #f8f9fa;
+  display: none;
+}
+::-webkit-scrollbar-track-piece {
+  /*内层轨道，滚动条中间部分（位置4）*/
+  // background: #f8f9fa;
+  display: none;
+}
+::-webkit-scrollbar-thumb {
+  /*滚动条里面可以拖动的那部分（位置5）*/
+  background: var(--theme-color);
+  border-radius: 4px;
+}
+::-webkit-scrollbar-corner {
+  /*边角（位置6）*/
+  background: #c0c0c0;
+}
+
+/** 字体 */
+@font-face {
+  font-family: 'HYWenHei 85W';
+  src: url(http://cdn.jsdelivr.ren/npm/folltoshe-resources@1.0.0/fonts/genshin/index.ttf);
+}
+:root {
+  --font-family-fancy: 'HYWenHei 85W', sans-serif;
+  --font-family: 'HYWenHei 85W', sans-serif;
+  --font-family-code: 'HYWenHei 85W', sans-serif;
+}
+* {
+  font-family: 'HYWenHei 85W', sans-serif;
+}
+
+.buttonHref {
+  text-decoration: none;
+}
+
+.home.project {
+  padding: 10px 2rem 0;
+}
 
 // 主页文字
-
 .home.project .hero h1,
 .home.project .hero .description,
 .home.project .hero .action {
@@ -62,4 +106,13 @@ strong {
     left: 0 !important;
     width: 100% !important;
   }
+}
+
+.n-card {
+  --n-color: var(--bg-color) !important;
+  --n-text-color: var(--text-color) !important;
+  --n-title-text-color: var(--text-color) !important;
+  --n-border-color: rgba(0, 0, 0, 0) !important;
+  --n-box-shadow: 0 1px 2px -2px var(--theme-color-mask), 0 3px 6px 0 var(--theme-color-mask),
+    0 5px 12px 4px var(--theme-color-mask) !important;
 }
