--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,3 +1,6 @@
+@import './modules/vuepress.scss';
+@import './modules/naiveui.scss';
+
 /** 滚动条 */
 ::-webkit-scrollbar {
   /*滚动条整体部分，其中的属性有width,height,background,border等（就和一个块级元素一样）（位置1）*/
@@ -36,87 +39,4 @@
 }
 * {
   font-family: 'HYWenHei 85W', sans-serif;
-}
-
-.buttonHref {
-  text-decoration: none;
-}
-
-.home.project {
-  padding: 10px 2rem 0;
-}
-
-// 主页文字
-.home.project .hero h1,
-.home.project .hero .description,
-.home.project .hero .action {
-  margin: 30px;
-}
-
-// 提醒
-strong {
-  color: var(--black);
-}
-
-// 主页按钮
-.home.project .hero .action-button {
-  border-radius: 40px;
-}
-
-.home.project .hero h1,
-.home.project .hero .description,
-.home.project .hero .action {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.hero-info {
-  text-align: center;
-}
-
-.nav-links {
-  margin-left: 20px !important;
-}
-
-.footer-wrapper {
-  position: relative !important;
-  left: var(--sidebar-width) !important;
-  width: calc(100% - var(--sidebar-width)) !important;
-  -webkit-padding-start: 0 !important;
-  padding-inline-start: 0 !important;
-  -webkit-padding-end: 0 !important;
-  padding-inline-end: 0 !important;
-}
-
-.sidebar {
-  -webkit-padding-start: 0 !important;
-  padding-inline-start: 0 !important;
-}
-
-.theme-container.sidebar-collapsed,
-.no-sidebar .footer-wrapper {
-  left: 0 !important;
-  width: 100% !important;
-}
-
-@media (max-width: 719px) {
-  .footer-wrapper {
-    left: 0 !important;
-    width: 100% !important;
-  }
-}
-
-.n-card {
-  --n-color: var(--bg-color-secondary) !important;
-  --n-text-color: var(--text-color) !important;
-  --n-title-text-color: var(--text-color) !important;
-  --n-border-color: rgba(0, 0, 0, 0) !important;
-  --n-box-shadow: 0 2px 12px 0 var(--card-shadow) !important;
-  transition: background var(--color-transition), box-shadow var(--color-transition),
-    transform var(--transform-transition);
-}
-.n-card:hover {
-  transform: scale(1.03);
 }
