--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -30,7 +30,7 @@
 /** 字体 */
 @font-face {
   font-family: 'HYWenHei 85W';
-  src: url(//cdn.jsdelivr.ren/npm/folltoshe-resources@1.0.0/fonts/genshin/index.ttf);
+  src: url(https://cdn.jsdelivr.ren/npm/folltoshe_file/fonts/HYWenHei%2085W/compress/dist.woff);
 }
 :root {
   --font-family-fancy: 'HYWenHei 85W', sans-serif;
