--- a/src/.vuepress/styles/modules/vuepress.scss
+++ b/src/.vuepress/styles/modules/vuepress.scss
@@ -1,5 +1,14 @@
-.home.project {
-  padding: 10px 2rem 0;
+hr {
+  border-color: var(--theme-color-mask);
+}
+h2 {
+  border-color: var(--theme-color-mask);
+}
+h3 {
+  border-color: var(--theme-color-mask);
+}
+h4 {
+  border-color: var(--theme-color-mask);
 }
 
 // 主页文字
