--- a/src/.vuepress/styles/modules/naiveui.scss
+++ b/src/.vuepress/styles/modules/naiveui.scss
@@ -6,7 +6,18 @@
   --n-box-shadow: 0 2px 12px 0 var(--card-shadow) !important;
   transition: background var(--color-transition), box-shadow var(--color-transition),
     transform var(--transform-transition);
+  background-color: #00000000;
+  border-radius: 0.5rem;
 }
 .n-card[home]:hover {
-  transform: scale(1.03);
+  background-color: var(--bg-color-secondary);
+  box-shadow: 0 2px 12px 0 var(--card-shadow);
+  transform: scale(1.05);
+}
+
+.n-button {
+  --n-color: var(--theme-color-mask) !important;
+  --n-color-hover: var(--theme-color-light) !important;
+  --n-text-color: var(--text-color) !important;
+  --n-text-color-hover: var(--text-color-light) !important;
 }
